[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/Strawberry.png" type="Texture" id=1]
[ext_resource path="res://Strawberry.gd" type="Script" id=2]
[ext_resource path="res://bloodspatter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Hop"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.12, 0.9 ), Vector2( 0.9, 1.12 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.55508, 5.35759 )

[node name="Strawberry" type="Sprite"]
scale = Vector2( 0.900078, 1.11991 )
texture = ExtResource( 1 )
offset = Vector2( 0, -0.340444 )
hframes = 4
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Hop"
anims/Hop = SubResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

[node name="Area2D" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]

[editable path="Area2D"]
